[project]
requires-python = ">=3.9"

[tool.poetry]
name = "dvsa_mot_history"
version = "1.0.3"
description = "Python SDK for DVSA MOT History API"
authors = ["tigattack <10629864+tigattack@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "dvsa_mot_history"}
]

[tool.poetry.urls]
Repository = "https://github.com/tigattack/dvsa-mot-history-api-py"
Issues = "https://github.com/tigattack/dvsa-mot-history-api-py/issues"
Changelog = "https://github.com/tigattack/dvsa-mot-history-api-py/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
msal = "^1.30.0"
aiohttp = "3.9.5"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff.lint]
extend-select = ["UP", "PLR"]
ignore = ["PLR2004"]
